apps/playground/api/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api
  annotations:
    argocd.argoproj.io/sync-wave: '90'
spec:
  replicas: 10
  revisionHistoryLimit: 1
  rollbackWindow: # https://argo-rollouts.readthedocs.io/en/stable/features/rollback/
    revisions: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/name: app
    spec:
      containers:
      - name: api
        image: argoproj/rollouts-demo:green
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: api-preview
      stableService: api-stable
      scaleDownDelaySeconds: 3600
      scaleDownDelayRevisionLimit: 1
      trafficRouting:
        nginx:
          stableIngress: api-ingress
      steps:
      - setWeight: 20
      - setCanaryScale: # scale replicaset to 100% with only 20% traffic
          weight: 100
      - pause: {}
      - setWeight: 40
      - setWeight: 80
