apps/playground/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: app
---
apiVersion: v1
kind: Service
metadata:
  name: api-preview
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: app
